background.css
body{
  margin:0;
  padding:0;
  color: green;
  font-family:sans-serif;
  font-size:160%;
}
.title {
  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
  font-size: 1000px;
  font-style: normal;
  font-variant: normal;
  font-weight: 500;
  line-height: 26.4px;
}
div{
    padding: 4% 10%;
}

.card {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    width: 30%;
    border-radius: 5px;
    background-color: white;
}

.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}


.container {
    padding: 2px 16px;
}
.one{
      background-color: #1db954;
  background-image: -webkit-linear-gradient(150deg, #84bd00 60%, #ffffff 40%);
  min-height: 500px;
}
.two{
  background-color: #84bd00;
  background-image: -webkit-linear-gradient(30deg, #581845 50%, #FFC300 50%);
  min-height: 500px;
}

.three{
  background-color: #EFEEEF;
  min-height: 260px;
}
.four{
  background-color: #E0E0E0;
  min-height: 260px;
}
.five{
  background-color: #EFEEEF;
  min-height: 260px;
}

.six{
  background-color: #34ADFF;
  background-image: -webkit-linear-gradient(30deg, #34ADFF 45%, #4CBFFF 45%);
  min-height: 400px;
}
.seven{
  background-color: #013A6B;
  background-image: -webkit-linear-gradient(150deg, #013A6B 35%, #004E95 35%);
  min-height: 200px;
}

